--- a/Unit1/Unit01_Crash Course on Python.ipynb
+++ b/Unit1/Unit01_Crash Course on Python.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 03 -  猜數字（Guess the number）\n",
+    "###### 03 -  猜數字（Guess the number）\n",
     "#### 請使用者猜一個介於範圍（例如 1 到 100）之間的數字，\n",
     "#### 若使用者猜錯，就詢問他們想繼續玩還是退出；若使用者猜對，就顯示祝賀訊息，\n",
     "#### 並統計使用者的嘗試次數。如果使用者輸入的數字超出設定範圍，就顯示錯誤提示。\n",
@@ -102,10 +102,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 0 < ? < 100: 7\n",
+      "再大一點! 您猜了 1 次\n",
+      "繼續嗎? (y/n)83\n",
+      "猜數字範圍 0 < ? < 100: 83\n",
+      "再小一點!您猜了 2 次\n",
+      "繼續嗎? (y/n)y\n",
+      "猜數字範圍 0 < ? < 100: 19\n",
+      "再大一點! 您猜了 3 次\n",
+      "繼續嗎? (y/n)y\n",
+      "猜數字範圍 0 < ? < 100: 76\n",
+      "再小一點!您猜了 4 次\n",
+      "繼續嗎? (y/n)n\n"
+     ]
+    }
+   ],
+   "source": [
+    "times = 1\n",
+    "sol = 66\n",
+    "cont = 1\n",
+    "while (cont != \"N\") and (cont != \"No\") and (cont != \"不\") and (cont != \"n\"): \n",
+    "    num = input(\"猜數字範圍 0 < ? < 100: \")\n",
+    "    if int(num) == sol: \n",
+    "        print(\"賓果!猜對了,答案是66\") \n",
+    "        break\n",
+    "    elif int(num) <= 0 or int(num) >= 100: \n",
+    "        print(\"超出範圍\")\n",
+    "        break\n",
+    "    elif int(num) < sol: \n",
+    "        print(\"再大一點! 您猜了\", times, \"次\") \n",
+    "        cont = input(\"繼續嗎? (y/n)\")\n",
+    "        times += 1\n",
+    "    elif int(num) > sol: \n",
+    "        print(\"再小一點!您猜了\", times, \"次\")\n",
+    "        cont = input(\"繼續嗎? (y/n)\")\n",
+    "        times += 1 \n",
+    "    else: \n",
+    "        print(\"錯誤輸入\")\n",
+    "        break   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,29 +170,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我要成為寫程式的專家\n",
-      "你用了 10 個文字述說內心的想法\n",
+      "asdf\n",
+      "你用了 4 個文字述說內心的想法\n",
       "------------------------------------------\n",
+      "請輸入一個字天\n",
+      "這個字:  天 出現了 9 次\n",
       "------------------------------------------\n",
-      "文章總字數: 1081\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'maxchar' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11380/3187698296.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[1;31m#還要記錄 現在這個字(astr) 到 目前已知出現最多次的字\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    145\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 146\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmaxchar\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'maxchar' is not defined"
+      "文章總字數: 840\n",
+      "不\n"
      ]
     }
    ],
@@ -282,12 +320,18 @@
     "#請使用者輸入一文字\n",
     "#計算該文字在文章出現次數\n",
     "#列印出現次數\n",
+    "word = input(\"請輸入一個字\")\n",
+    "print(\"這個字: \", word, \"出現了\", s.count(word), \"次\")\n",
     "\n",
     "print (\"------------------------------------------\")\n",
-    "#把文字中 '。，\\n；：？「」'的標點符號去除\n",
-    "\n",
+    "#把文字中 '。，\\n；：？)「」'的標點符號去除\n",
+    "for i in '。，\\n；：？)「」': \n",
+    "    s = s.replace(i, '')\n",
+    "    \n",
     "#目前已知出現最多次的字的次數\n",
     "#目前已知出現最多次的字\n",
+    "max_count = 0\n",
+    "maxchar = ''\n",
     " \n",
     "print('文章總字數:',len(s))\n",
     "\n",
@@ -297,6 +341,9 @@
     "    # 如果 現在這個字出現的次數(act) 大於 目前已知出現最多次字的次數\n",
     "        #就讓 現在這個字出現的次數 成為 目前已知出現最多次的字的次數\n",
     "        #還要記錄 現在這個字(astr) 到 目前已知出現最多次的字\n",
+    "    if act > max_count: \n",
+    "        max_count = act\n",
+    "        maxchar = astr\n",
     "else:\n",
     "    print(maxchar)"
    ]
@@ -323,16 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your email address?: aaa@ntut.org.tw\n",
-      "Your username is 'aaa' and your domain name is 'ntut.org.tw'\n",
-      "這是在 ntut 之下自定義域\n"
+      "What is your email address?: matt.pan@myfantasy.com\n",
+      "Your username is 'matt.pan' and your domain name is 'myfantasy.com'\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'myfantasy.com'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14016/1496915453.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"這是在 {} 之下自定義域\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdomain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdomain_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'myfantasy.com'"
      ]
     }
    ],
@@ -341,10 +398,10 @@
     "email = input(\"What is your email address?: \").strip()\n",
     "\n",
     "# Slice out the user name\n",
-    "\n",
+    "user_name = email[0:email.index('@')]\n",
     "\n",
     "# Slice the domain name\n",
-    "\n",
+    "domain_name = email[email.index('@') + 1: len(email)]\n",
     "\n",
     "# Format message\n",
     "output = \"Your username is '{}' and your domain name is '{}'\".format(user_name,domain_name)\n",
@@ -354,11 +411,11 @@
     "\n",
     "\n",
     "domain = {'gmail.com':'Google','yahoo.com.tw':'Yahoo','ntu.edu.tw':'臺大','hotmail.com.tw':'Hotmail','hotmail.com':'Hotmail'}\n",
-    "if ??????:\n",
-    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(??????)\n",
+    "if domain_name in domain: \n",
+    "    output = \"這是註冊在 {} 之下的 Email 地址\".format(domain[domain_name])\n",
     "else:\n",
     "    \n",
-    "    output = \"這是在 {} 之下自定義域\".format(??????)\n",
+    "    output = \"這是在 {} 之下自定義域\".format(domain[domain_name])\n",
     "print(output)"
    ]
   },
@@ -384,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -442,14 +499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\code\\ML_202105\\testfile\n",
+      "testfile\n",
+      "['file1', 'file2', 'hw_07945001.txt', 'hw_079450010.doc', 'hw_07945002.txt', 'hw_07945003.txt', 'hw_07945004.txt', 'hw_07945005.txt', 'hw_07945007.txt', 'hw_07945008.txt', 'hw_07945009.txt']\n",
       "I'm a directory: file1\n",
       "I'm a directory: file2\n",
       "I'm a File: hw_07945001.txt\n",
@@ -471,7 +531,7 @@
     "yourPath = input()\n",
     "# 列出指定路徑底下所有檔案(包含資料夾)\n",
     "allFileList = os.listdir(yourPath)\n",
-    "\n",
+    "print(allFileList)\n",
     "# 逐一查詢檔案清單\n",
     "for file in allFileList:\n",
     "#   這邊也可以視情況，做檔案的操作(複製、讀取...等)\n",
