--- a/Unit1/Unit01_Crash Course on Python.ipynb
+++ b/Unit1/Unit01_Crash Course on Python.ipynb
@@ -71,21 +71,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "想說啥?hello\n",
-      "今天心情如何?一般般吧\n"
+      "請問需要建造幾次模板故事：2\n",
+      "請輸入課程期數:342\n",
+      "請輸入課程名稱:python機器學習\n",
+      "請輸入姓名:江尚瑀\n",
+      "請輸入您的背景(科系或職業):資工訓練班學生\n",
+      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃):機器學習\n",
+      "------------------------------------------\n",
+      "第342期 - python機器學習\n",
+      "姓名： 江尚瑀 ,\n",
+      "學生背景： 資工訓練班學生\n",
+      "==========================================\n",
+      "江尚瑀 修習完課程[ python機器學習 ]後，\n",
+      "結業成果獲得: 機器學習 。\n",
+      "Well Done.\n",
+      "------------------------------------------\n",
+      "請輸入課程期數:342\n",
+      "請輸入課程名稱:python\n",
+      "請輸入姓名:jinjin\n",
+      "請輸入您的背景(科系或職業):小朋友\n",
+      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃):變高科技\n",
+      "------------------------------------------\n",
+      "第342期 - python\n",
+      "姓名： jinjin ,\n",
+      "學生背景： 小朋友\n",
+      "==========================================\n",
+      "jinjin 修習完課程[ python ]後，\n",
+      "結業成果獲得: 變高科技 。\n",
+      "Well Done.\n",
+      "------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "h1 = input(\"想說啥?\")\n",
-    "h2 = input(\"今天心情如何?\")"
+    "n = int(input(\"請問需要建造幾次模板故事：\"))\n",
+    "for i in range(n): \n",
+    "    semester = input(\"請輸入課程期數:\")\n",
+    "    course = input(\"請輸入課程名稱:\")\n",
+    "    name = input(\"請輸入姓名:\")\n",
+    "    background = input(\"請輸入您的背景(科系或職業):\")\n",
+    "    expectation = input(\"請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃):\")\n",
+    "    \n",
+    "    print(\"------------------------------------------\")\n",
+    "    print(\"第%s期 - %s\" %(semester,course))\n",
+    "    print(\"姓名：\", name, \",\")\n",
+    "    print(\"學生背景：\", background)\n",
+    "    print(\"==========================================\")\n",
+    "    print(name, \"修習完課程[\", course,\"]後，\")\n",
+    "    print(\"結業成果獲得:\", expectation, \"。\")\n",
+    "    print(\"Well Done.\")\n",
+    "    print(\"------------------------------------------\")\n",
+    "\n",
+    "# 請問需要建造幾次模板故事：1\n",
+    "# 請輸入課程期數: 342\n",
+    "# 請輸入課程名稱: python機器學習\n",
+    "# 請輸入姓名: 江尚瑀\n",
+    "# 請輸入您的背景(科系或職業): 資工訓練班學生\n",
+    "# 請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): 機器學習\n",
+    "# ------------------------------------------\n",
+    "# 第342期 - python機器學習 \n",
+    "# 姓名： 江尚瑀 ,\n",
+    "# 學生背景： 資工訓練班學生\n",
+    "# ==========================================\n",
+    "# 江尚瑀 修習完課程[ python機器學習 ]後，\n",
+    "# 結業成果獲得: 機器學習 。\n",
+    "# Well Done.\n",
+    "# ------------------------------------------"
    ]
   },
   {
@@ -370,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -378,18 +438,8 @@
      "output_type": "stream",
      "text": [
       "What is your email address?: matt.pan@myfantasy.com\n",
-      "Your username is 'matt.pan' and your domain name is 'myfantasy.com'\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'myfantasy.com'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14016/1496915453.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"這是在 {} 之下自定義域\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdomain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdomain_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'myfantasy.com'"
+      "Your username is 'matt.pan' and your domain name is 'myfantasy.com'\n",
+      "這是在 myfantasy 之下自定義域\n"
      ]
     }
    ],
@@ -415,7 +465,7 @@
     "    output = \"這是註冊在 {} 之下的 Email 地址\".format(domain[domain_name])\n",
     "else:\n",
     "    \n",
-    "    output = \"這是在 {} 之下自定義域\".format(domain[domain_name])\n",
+    "    output = \"這是在 {} 之下自定義域\".format(domain_name[0:domain_name.index('.')])\n",
     "print(output)"
    ]
   },
@@ -567,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -576,11 +626,11 @@
      "text": [
       "2\n",
       "['f1', 'f2']\n",
-      "Enter\n",
-      "['f2', 'folder1']\n",
-      "Enter\n",
+      "Press Enter\n",
+      "['f2', 'folder 1']\n",
+      "Press Enter\n",
       "['f2']\n",
-      "Enter\n"
+      "Press Enter\n"
      ]
     }
    ],
@@ -593,7 +643,23 @@
     "os.mkdir('files')\n",
     "\n",
     "n = int(input())\n",
-    "\n"
+    "\n",
+    "os.chdir('files')\n",
+    "for i in range(1,n + 1): \n",
+    "    os.mkdir('f' + str(i))\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input(\"Press Enter\")\n",
+    "\n",
+    "os.rename('f1', 'folder 1')\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input(\"Press Enter\")\n",
+    "\n",
+    "os.rmdir('folder 1')\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input(\"Press Enter\") \n",
+    "\n",
+    "os.chdir('../')\n",
+    "shutil.rmtree('files')"
    ]
   },
   {
@@ -612,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +689,7 @@
       "Palindrome checker\n",
       "\n",
       "Please enter a word, phrase, or a sentence \n",
-      "to check if it is a palindrome: 雨 滋 春 樹 碧 連 天  天 連 碧 樹 春 滋 雨\n",
+      "to check if it is a palindrome: madam\n",
       "The text you have entered is a palindrome!\n"
      ]
     }
@@ -632,24 +698,32 @@
     "def convertInputString():\n",
     "    #請使用者輸入一串字串，先轉換字串為統一小寫\n",
     "    rawInput = input(\"\\nPlease enter a word, phrase, or a sentence \\nto check if it is a palindrome: \") \n",
-    "    return ???\n",
+    "    lower = rawInput.lower()\n",
+    "    return list(lower)\n",
     "\n",
     "def stripAnalphabetics(dirtyList): \n",
     "    analphabeticList = [\" \", \"-\", \".\", \",\", \":\", \";\", \"!\", \"?\", \"'\", \"\\\"\"] \n",
     "    #去除相關標點符號\n",
-    "    return ???\n",
+    "    for x in analphabeticList: \n",
+    "        if x in dirtyList: \n",
+    "            dirtyList.remove(x)\n",
+    "            return stripAnalphabetics(dirtyList)\n",
+    "    return dirtyList\n",
     "\n",
     "def runPalindromeCheck(straightList):\n",
     "    reversedList = straightList[::-1] \n",
-    "    if ????: \n",
+    "    if reversedList == straightList: \n",
     "        return \"The text you have entered is a palindrome!\" \n",
     "    else: \n",
     "        return \"The text you have entered is not a palindrome.\" \n",
     "\n",
     "def main(): \n",
     "    print(\"\\nPalindrome checker\") \n",
-    "\n",
-    "\n",
+    "    lowerlist = convertInputString()\n",
+    "    striplist = stripAnalphabetics(lowerlist)\n",
+    "    palindromecheck = runPalindromeCheck(striplist)\n",
+    "    print(palindromecheck)\n",
+    "    \n",
     "main() "
    ]
   },
@@ -724,8 +798,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -769,30 +845,33 @@
        "'\\nline=\\'\\'\\nfout = open(\"Score.csv\",\"r\")\\nfor i in (len(name)):\\n    print()\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fin_E = open(??????,\"r\",encoding='UTF-8')\n",
-    "fin_M = open(??????,\"r\",encoding='UTF-8')\n",
+    "os.getcwd()\n",
+    "fin_E = open(\"data/english_list.csv\",\"r\",encoding='UTF-8')\n",
+    "fin_M = open(\"data/math_list.csv\",\"r\",encoding='UTF-8')\n",
     "lisE=[]\n",
     "lisM=[]\n",
     "name=[]\n",
-    "for line in fin_E.readlines():\n",
+    "for line in fin_E.readlines(): \n",
+    "#     print(line, end = '')\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
-    "    ???\n",
+    "#     print(line)\n",
+    "    name.append(line[0])\n",
+    "    lisE.append(line[1])\n",
     "    \n",
     "for line in fin_M.readlines():\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
+    "    lisM.append(line[1])\n",
     "    \n",
     "score=[]\n",
     "fout = open(\"Score.csv\",\"w\")\n",
     "line=''\n",
-    "for i in range(???,???):\n",
+    "for i in range(1,len(name)):\n",
     "    score.append(int(lisE[i])+int(lisM[i]))\n",
     "    list1 = [name[i],str(score[i-1]),\"\\n\"]\n",
     "    print(name[i],str(score[i-1]))\n",
